code/human_written_tests/WebAssembly/processed_control_flow_validation/test_unreachable_105.wast
(assert_invalid
  (module (func $type-loop-value-nested-unreachable-num-vs-num (result i32)
    (loop (result i64) (i64.const 0) (block (unreachable)))
  ))
  "type mismatch"
)